--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
   },
   "dependencies": {
     "aws-cdk-lib": "2.232.1",
-    "constructs": "^10.0.0",
-    "uuid": "^11.1.0"
+    "constructs": "^10.0.0"
   }
 }
