--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 !jest.config.js
 *.d.ts
 node_modules
@@ -6,3 +5,5 @@ node_modules
 # CDK asset staging directory
 .cdk.staging
 cdk.out
+package-lock.json
+.DS_Store
